Remove unused stats